--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -754,8 +754,9 @@ p {
 	height: auto;
 	display: flex;
 	flex-wrap: wrap;
-	gap: 24px;
-	margin-bottom: 24px;
+	justify-content: flex-start;
+	margin-left: -24px;
+
 
 	@include mq(max_md) {
 		flex-direction: row;
@@ -764,8 +765,8 @@ p {
 	}
 
 	.list-top-match-item {
-		min-width: 300px;
-		max-width: 300px;
+		min-width: calc(1/4*100% - 24px);
+		max-width: calc(1/4*100% - 24px);
 		min-height: 150px;
 		max-height: 150px;
 		padding: 16px 32px;
@@ -776,6 +777,13 @@ p {
 		display: flex;
 		justify-content: space-between;
 		position: relative;
+    margin-left: 24px;
+		margin-bottom: 24px;
+
+		// &:nth-of-type(3n + 3) {
+		// 	border: 1px solid red;
+		// 	margin-right: 0 !important;
+		// }
 
 		@include mq(max_md) {
 			flex-direction: column;
@@ -942,8 +950,8 @@ p {
 .list-news {
 	display: flex;
 	flex-wrap: wrap;
-	gap: 24px;
 	margin-top: 40px;
+	margin-left: -24px;
 
 	a {
 		text-decoration: none;
@@ -958,12 +966,11 @@ p {
 		margin-top: 16px;
 	}
 
-
-
 	.news-item {
 		min-width: 408px;
 		height: auto;
-		width: calc((100% - 48px) / 3);
+		width: calc((100% - 24px) / 3);
+		margin-left: 24px;
 		margin-bottom: 40px;
 
 		@include mq(max_md) {
